manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eyego-ingress
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: helloapp.zapto.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-eyego-service
                port:
                  number: 80
